fix: JSON display does not wrap on x-axis

--- a/core_main_app/static/core_main_app/common/css/detail.css
+++ b/core_main_app/static/core_main_app/common/css/detail.css
@@ -1,9 +1,9 @@
-
-.display-detail{
-    height:600px;
-    overflow:scroll;
+.display-detail {
+    height: 600px;
+    white-space: break-spaces;
+    overflow: scroll;
     background-color: #fafafa;
-    border:1px solid #cdcdcd;
+    border: 1px solid #cdcdcd;
     border-radius: 10px;
 }
 
