--- a/core_main_app/static/core_main_app/common/css/table.css
+++ b/core_main_app/static/core_main_app/common/css/table.css
@@ -17,7 +17,7 @@
 }
 
 .col-width-75 {
-    width: 75%:
+    width: 75%;
 }
 
 .col-width-25 {
